--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.0",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-dom": "^17.0.0",
+    "react-scripts": "^3.4.4",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0"
