--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "^3.4.4",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
